--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ ul, li{
     flex-direction: column;
 }
 
-.article-button{
+.article-button.right{
     align-self: flex-end;
     background: #9900cc;
     color: #fff;
@@ -37,6 +37,17 @@ ul, li{
     padding: 5px 20px;
     border-radius: 10px;
 }
+
+.article-button.left{
+    align-self: flex-start;
+    background: #9900cc;
+    color: #fff;
+    text-transform: uppercase;
+    border: none;
+    padding: 5px 20px;
+    border-radius: 10px;
+}
+
 
 .article-comments ul{
     display: flex;
